--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-<<<<<<< HEAD:backend/package.json
-    "nodemon": "^2.0.22"
-=======
+    "nodemon": "^2.0.22",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
->>>>>>> 87c0697135efff05f1bb673ebadf722c31a43294:package.json
   }
 }
