--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 port=5000
-dbUrl="mongodb+srv://admin:admin@flipr.cwbkh36.mongodb.net/flipr?retryWrites=true&w=majority"
+# dbUrl="mongodb+srv://admin:admin@flipr.cwbkh36.mongodb.net/flipr?retryWrites=true&w=majority"
 # dbUrl="mongodb://localhost:27017"
+dbUrl="mongodb+srv://muskanvijaybajaj:itxh9Bp3dk6B7zYe@podcast.oaqtw7f.mongodb.net/"
 
 #jwt
 jwtKey="vinitagawral007"
